--- a/src/main/resources/assets/leopardcraft/lang/en_US.json
+++ b/src/main/resources/assets/leopardcraft/lang/en_US.json
@@ -55,5 +55,6 @@
     "item.leopardcraft.monkey_spawn_egg": "Monkey Spawn Egg",
     "entity.leopardcraft.monkey": "Monkey",
     "item.leopardcraft.antivenom": "Antivenom",
-    "item.leopardcraft.chainsaw": "Chainsaw"
+    "item.leopardcraft.chainsaw": "Chainsaw",
+    "item.leopardcraft.magnet": "Magnet"
 }
